<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/puddle">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/setWallpaperButton"
        app:layout_constraintBottom_toBottomOf="@id/setWallpaperButton"
        app:layout_constraintRight_toLeftOf="@+id/setWallpaperButton"
        android:src="@drawable/leaf5"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/setWallpaperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/set_wallpaper"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/setWallpaperButton"
        app:layout_constraintBottom_toBottomOf="@id/setWallpaperButton"
        app:layout_constraintLeft_toRightOf="@+id/setWallpaperButton"
        android:src="@drawable/leaf2"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/layout_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/setWallpaperButton"
        app:layout_constraintBottom_toTopOf="@id/layout_optimization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/water_speed"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/waterSpeedSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:max="7"
            android:thumbTint="#ffffff"
            android:progressTint="#ffffff"
            android:progressBackgroundTint="#ffffff"/>

        <TextView
            android:id="@+id/waterSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_optimization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_speed"
        app:layout_constraintBottom_toTopOf="@id/optimizationWarningText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/optimization"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/optimizationSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:max="2"
            android:thumbTint="#ffffff"
            android:progressTint="#ffffff"
            android:progressBackgroundTint="#ffffff"/>

        <TextView
            android:id="@+id/optimizationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/optimizationWarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_optimization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/optimization_warning"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>